--- a/haksa/.project
+++ b/haksa/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ex05</name>
+	<name>haksa</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -30,7 +30,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1690874739672</id>
+			<id>1690874739688</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
